--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
   </head>
   <body>
-    <header>
+    <header class="heaer">
          <nav>
           <h3 class="nav tital">Ma<span class="text-primary">r</span>y</h3>
           <ul>
@@ -19,6 +19,15 @@
             <li><button class="btn-primary">Hire Me</button></li>
           </ul>
          </nav>
+         <div class="banner">
+          <div>
+            <h3 class="banner-greeting">Hi, I am</h3>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fugit cum officia possimus atque explicabo corrupti quis ea quasi magni commodi nemo voluptates, quae cumque blanditiis necessitatibus excepturi recusandae sapiente.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+          </div>
+         </div>
     </header>
     <main>
 
