--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
           </ul>
          </nav>
          <div class="banner">
-          <div>
+          <div class="banner content">
             <h3 class="banner-greeting">Hi, I am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fugit cum officia possimus atque explicabo corrupti quis ea quasi magni commodi nemo voluptates, quae cumque blanditiis necessitatibus excepturi recusandae sapiente.</p>
             <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contact</button>
           </div>
+          <img class="profile picture"src="images/hardy.png.png" alt="">
          </div>
     </header>
     <main>
