--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+ <!DOCTYPE html>
   <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="styles/portfolio.css">
   </head>
   <body>
-    <header class="heaer">
+    <header class="header">
          <nav>
-          <h3 class="nav tital">Ma<span class="text-primary">r</span>y</h3>
+          <h2 class="nav tital">Ma<span class="text-primary">r</span>y</h2>
           <ul>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Blogs</a></li>
@@ -23,15 +23,20 @@
           <div class="banner content">
             <h3 class="banner-greeting">Hi, I am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fugit cum officia possimus atque explicabo corrupti quis ea quasi magni commodi nemo voluptates, quae cumque blanditiis necessitatibus excepturi recusandae sapiente.</p>
+            <p class="banner discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
             <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contact</button>
           </div>
-          <img class="profile picture"src="images/hardy.png.png" alt="">
+          <img class="profile picture"src="images/hardy.png" alt="">
          </div>
     </header>
     <main>
-
+<section class="about">
+  <h3 class="section title">ABOUT ME</h3>
+  <p class="section-discription">
+    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+  </p>
+</section>
     </main>
     <footer>
         
